--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
         >
         <nav>
           <ul class="nav-list">
-            <li class="nav-list-item"><a href="#">Agencja</a></li>
+            <li class="nav-list-item"><a href="/index.html">Agencja</a></li>
             <li class="nav-list-item">
-              <a href="portfolio.html">Portfolio</a>
+              <a class="active" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-list-item"><a href="#K">Kontakt</a></li>
           </ul>
