--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,15 @@
         >
         <nav>
           <ul class="nav-list">
-            <li class="nav-list-item"><a href="/index.html">Agencja</a></li>
             <li class="nav-list-item">
-              <a class="active" href="portfolio.html">Portfolio</a>
+              <a class="nav-link" href="/index.html">Agencja</a>
             </li>
-            <li class="nav-list-item"><a href="#K">Kontakt</a></li>
+            <li class="nav-list-item">
+              <a class="nav-link active" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link" href="#K">Kontakt</a>
+            </li>
           </ul>
         </nav>
         <ul class="contact-list">
@@ -55,19 +59,19 @@
         <div class="container">
           <ul class="pushbutton-list">
             <li class="pushbutton-list-item">
-              <button type="button">Wszystkie</button>
+              <button class="button-style" type="button">Wszystkie</button>
             </li>
             <li class="pushbutton-list-item">
-              <button type="button">Strony</button>
+              <button class="button-style" type="button">Strony</button>
             </li>
             <li class="pushbutton-list-item">
-              <button type="button">Aplikacje</button>
+              <button class="button-style" type="button">Aplikacje</button>
             </li>
             <li class="pushbutton-list-item">
-              <button type="button">Dizajn</button>
+              <button class="button-style" type="button">Dizajn</button>
             </li>
             <li class="pushbutton-list-item">
-              <button type="button">Marketing</button>
+              <button class="button-style" type="button">Marketing</button>
             </li>
           </ul>
         </div>
@@ -76,20 +80,31 @@
         <div class="container">
           <ul class="portfolio-list">
             <li class="portfolio-image">
-              <a href="#">
+              <div class="portfolio-image-overlay">
                 <figure>
-                  <img
-                    src="image/technocrack.jpg"
-                    alt="laptop"
-                    width="370"
-                    height="294"
-                  />
+                  <a class="portfolio-image-style" href="#">
+                    <img
+                      src="image/technocrack.jpg"
+                      alt="laptop"
+                      width="370"
+                      height="294"
+                    />
+                  </a>
+                  <a class="portfolio-image-style-link" href="#">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </a>
+
                   <figcaption>
                     <h3 class="portfolio-indention">Technocrack</h3>
                     <p class="portfolio-indention-text">Strona internetowa</p>
                   </figcaption>
                 </figure>
-              </a>
+              </div>
             </li>
             <li class="portfolio-image">
               <a href="#">
