dodanie nakładki do portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,35 +79,32 @@
       <section class="portfolio">
         <div class="container">
           <ul class="portfolio-list">
-            <li class="portfolio-image">
-              <div class="portfolio-image-overlay">
-                <figure>
-                  <a class="portfolio-image-style" href="#">
-                    <img
-                      src="image/technocrack.jpg"
-                      alt="laptop"
-                      width="370"
-                      height="294"
-                    />
-                  </a>
-                  <a class="portfolio-image-style-link" href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
+                <img
+                  src="image/technocrack.jpg"
+                  alt="laptop"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
                       rozpowszechniania koronawirusa. Firmy wykorzystują tę
                       platformę do celów szpiegowskich i ataków na
                       niezabezpieczone serwery konkurencji
                     </p>
-                  </a>
-
-                  <figcaption>
-                    <h3 class="portfolio-indention">Technocrack</h3>
-                    <p class="portfolio-indention-text">Strona internetowa</p>
-                  </figcaption>
-                </figure>
-              </div>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">Technocrack</h3>
+                  <p class="portfolio-indention-text">Strona internetowa</p>
+                </div>
+              </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/basketball.jpg"
@@ -124,8 +121,8 @@
                 </figure>
               </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/seafood_restaurant.jpg"
@@ -140,8 +137,8 @@
                 </figure>
               </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/project_prime.jpg"
@@ -156,8 +153,8 @@
                 </figure>
               </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/project_boxes.jpg"
@@ -172,8 +169,8 @@
                 </figure>
               </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/inspirations.jpg"
@@ -190,8 +187,8 @@
                 </figure>
               </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/magazine.jpg"
@@ -206,8 +203,8 @@
                 </figure>
               </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/project_lab.jpg"
@@ -222,8 +219,8 @@
                 </figure>
               </a>
             </li>
-            <li class="portfolio-image">
-              <a href="#">
+            <li>
+              <a class="portfolio-list-item" href="#">
                 <figure>
                   <img
                     src="image/growing_business.jpg"
