--- a/portfolio.html
+++ b/portfolio.html
@@ -79,8 +79,8 @@
       <section class="portfolio">
         <div class="container">
           <ul class="portfolio-list">
-            <li>
-              <a class="portfolio-list-item" href="#">
+            <li class="portfolio-list-item">
+              <a href="#">
                 <img
                   src="image/technocrack.jpg"
                   alt="laptop"
@@ -103,136 +103,200 @@
                 </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/basketball.jpg"
-                    alt="basketball"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">
-                      Grafika New Orlean vs Golden Star
-                    </h3>
-                    <p class="portfolio-indention-text">Dizajn</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/basketball.jpg"
+                  alt="basketball"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">
+                    Grafika New Orlean vs Golden Star
+                  </h3>
+                  <p class="portfolio-indention-text">Dizajn</p>
+                </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/seafood_restaurant.jpg"
-                    alt="restaurant logo"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">Restauracja Seafood</h3>
-                    <p class="portfolio-indention-text">Aplikacja</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/seafood_restaurant.jpg"
+                  alt="restaurant logo"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">Restauracja Seafood</h3>
+                  <p class="portfolio-indention-text">Aplikacja</p>
+                </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/project_prime.jpg"
-                    alt="headphones"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">Aplikacja</h3>
-                    <p class="portfolio-indention-text">Marketing</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/project_prime.jpg"
+                  alt="headphones"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">Aplikacja</h3>
+                  <p class="portfolio-indention-text">Marketing</p>
+                </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/project_boxes.jpg"
-                    alt="boxes"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">Projekt Boxes</h3>
-                    <p class="portfolio-indention-text">Aplikacja</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/project_boxes.jpg"
+                  alt="boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">Projekt Boxes</h3>
+                  <p class="portfolio-indention-text">Aplikacja</p>
+                </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/inspirations.jpg"
-                    alt="screen"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">
-                      Inspiration has no Borders
-                    </h3>
-                    <p class="portfolio-indention-text">Strona internetowa</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/inspirations.jpg"
+                  alt="screen"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">
+                    Inspiration has no Borders
+                  </h3>
+                  <p class="portfolio-indention-text">Strona internetowa</p>
+                </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/magazine.jpg"
-                    alt="magazine"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">Strona internetowa</h3>
-                    <p class="portfolio-indention-text">Dizajn</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/magazine.jpg"
+                  alt="magazine"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">Strona internetowa</h3>
+                  <p class="portfolio-indention-text">Dizajn</p>
+                </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/project_lab.jpg"
-                    alt="label"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">Projekt LAB</h3>
-                    <p class="portfolio-indention-text">Marketing</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/project_lab.jpg"
+                  alt="label"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">Projekt LAB</h3>
+                  <p class="portfolio-indention-text">Marketing</p>
+                </div>
               </a>
             </li>
-            <li>
-              <a class="portfolio-list-item" href="#">
-                <figure>
-                  <img
-                    src="image/growing_business.jpg"
-                    alt="growing business"
-                    width="370"
-                    height="294"
-                  />
-                  <figcaption>
-                    <h3 class="portfolio-indention">Growing Business</h3>
-                    <p class="portfolio-indention-text">Aplikacja</p>
-                  </figcaption>
-                </figure>
+            <li class="portfolio-list-item">
+              <a href="#">
+                <img
+                  src="image/growing_business.jpg"
+                  alt="growing business"
+                  width="370"
+                  height="294"
+                />
+                <div class="akapit-overlay">
+                  <div class="akapit-overlay-text">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
+                <div class="portfolio-description">
+                  <h3 class="portfolio-indention">Growing Business</h3>
+                  <p class="portfolio-indention-text">Aplikacja</p>
+                </div>
               </a>
             </li>
           </ul>
