--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
         <nav>
           <ul class="nav-list">
             <li class="nav-list-item">
-              <a class="nav-link" href="/index.html">Agencja</a>
+              <a class="nav-link" href="index.html">Agencja</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-link active" href="portfolio.html">Portfolio</a>
